added tests and updated travis

--- a/cucumber.conf
+++ b/cucumber.conf
@@ -1,3 +1,4 @@
+token = 166191944790523915234402191099801650023876019566991133117
 language = 'cucumber'
 output_directory = './features'
 step_definitions_output_directory = './features/step_definitions'
